<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".kuis.KuisHijaiyahActivity">
    <ImageButton
        android:id="@+id/exit8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/kembali"
        />
    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Q1"
        android:fontFamily="@font/fredoka"
        android:textSize="22sp"/>
    <ImageButton
        android:id="@+id/suara"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/countLabel"
        android:background="@drawable/volume"/>
    <Button
        android:id="@+id/ansButton1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="150dp"
        android:layout_centerInParent="true"
        android:onClick="checkAnswer"
        android:text="@string/a"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#CE16DC"
        android:background="@drawable/btn_jawaban"/>
    <Button
        android:id="@+id/ansButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/ansButton1"
        android:onClick="checkAnswer"
        android:text="@string/c"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:background="@drawable/btn_jawaban"/>
    <Button
        android:id="@+id/ansButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:layout_centerInParent="true"
        android:onClick="checkAnswer"
        android:text="@string/b"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#63E314"
        android:background="@drawable/btn_jawaban"/>
    <Button
        android:id="@+id/ansButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/ansButton1"
        android:onClick="checkAnswer"
        android:text="@string/d"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#0ED87A"
        android:background="@drawable/btn_jawaban"/>

</RelativeLayout>