<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg1"
    tools:context=".SkorKuis">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="107dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/skor_anda"
            android:fontFamily="@font/fredoka"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/resultLabel"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:text="@string/skor_tertinggi"
            android:fontFamily="@font/fredoka"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary1"
            android:background="@color/colorSplash"
            android:id="@+id/totalScoreLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:text="@string/coba_lagi"
            android:fontFamily="@font/fredoka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button"
            android:background="@color/colorPrimary"
            android:textColor="#fff"/>
    </LinearLayout>
    <Button
        android:id="@+id/bckTmain"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_arrow_back_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp" />

</RelativeLayout>